kubernetes/apps/gravitee/gravitee-am/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gravitee-am
spec:
  hostnames:
    - api.${LIMITED_DOMAIN}
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: gravitee-am-gateway
          port: 82
      matches:
        - path:
            type: PathPrefix
            value: /auth
    - backendRefs:
        - name: gravitee-am-management-api
          port: 83
      matches:
        - path:
            type: PathPrefix
            value: /management
    - backendRefs:
        - name: gravitee-am-management-ui
          port: 8002
      matches:
        - path:
            type: PathPrefix
            value: /
